fix: improve z-index inflation

--- a/packages/client/src/components/progressBar/index.module.scss
+++ b/packages/client/src/components/progressBar/index.module.scss
@@ -10,7 +10,7 @@
   .progressInfo {
     position: relative;
     text-align: center;
-    z-index: 100;
+    z-index: 2;
     padding: 0.25rem;
 
     span {
